Updates to Livesharp.Server project to reference a local SSL cert instead of the one supplied by the original programmer. Also removed calls out to the news feed since that site isn't up any more.

--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,6 @@ build/
 
 scripts/LiveSharp.Build.dll
 scripts/*.zip
+/src/LiveSharp.Server/localhost.livesharp.cer
+/src/LiveSharp.Server/localhost.livesharp.net2.pfx
+/!HIve/Livesharp Cert Fix.txt
