--- a/src/LiveSharp.Server/LiveSharp.Server.csproj
+++ b/src/LiveSharp.Server/LiveSharp.Server.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>    
+    <TargetFramework>net6.0</TargetFramework>    
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <PublishReadyToRun>false</PublishReadyToRun>
     <RuntimeIdentifiers>win-x64;osx-x64</RuntimeIdentifiers>
@@ -42,7 +42,7 @@
     <_ContentIncludedByDefault Remove="wwwroot\assets\css\tailwind.min.css" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="localhost.livesharp.net.pfx">
+    <None Update="localhost.livesharp.cer">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
